--- a/style.sass
+++ b/style.sass
@@ -25,7 +25,7 @@ body, html
 
 #viewer
   position: relative
-  background-color: red
+  background-color: black
   video
     position: fixed
     top: 50%
